force-app/main/default/objects/Daily_Report_Checklist__c/Daily_Report_Checklist__c.object-meta.xml
<CustomObject>
    <label>Daily Report Checklist</label>
    <nameField>
        <displayFormat>DRC-{000000000}</displayFormat>
        <label>Daily Report Checklists</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Report Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>