force-app/main/default/objects/Daily_Report_Checklist__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>