force-app/main/default/objects/Daily_Report_Checklist__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <label>Daily Report</label>
    <referenceTo>ozbee__Production_Job_Report__c</referenceTo>
    <relationshipLabel>Daily Report Checklists</relationshipLabel>
    <relationshipName>Daily_Report_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>