force-app/main/default/objects/Daily_Report_Checklist__c/fields/Daily_Report_Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report_Checklist_Template__c</fullName>
    <label>Daily Report Checklist Template</label>
    <referenceTo>Daily_Report_Checklist_Template__c</referenceTo>
    <relationshipLabel>Daily Report Checklist</relationshipLabel>
    <relationshipName>Daily_Report_Checklist</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>