force-app/main/default/objects/Daily_Report_Checklist__c/fields/Production_Job_Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Production_Job_Checklist_Template__c</fullName>
    <label>Production Job Checklist Template</label>
    <referenceTo>ozbee__Production_Job_Checklist_Template__c</referenceTo>
    <relationshipLabel>Daily Report Checklists</relationshipLabel>
    <relationshipName>Daily_Report_Checklists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>