force-app/main/default/objects/Daily_Report_Checklist__c/fields/Safety_Inspection_Category__c.field-meta.xml
<CustomField>
    <fullName>Safety_Inspection_Category__c</fullName>
    <label>Inspection Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safety_Inspection_Checklist_Categories</valueSetName>
    </valueSet>
</CustomField>