force-app/main/default/objects/Daily_Report_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Daily_Report_Checklist_Template__c</columns>
    <columns>Safety_Inspection_Category__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>